# my_cpp_lib

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cc.bat  copilot-instructions.md  cr.bat  crr.bat  ct.bat  cti.bat  main.cpp  map.cpp  r.bat  utils.h  vec.cpp
.github/workflows/: cland-tidy.yml  tests.yml
src/: aggregate-class.cpp  appendix.cpp  atomic-smart-ptrs-cpp20.cpp  casts.cpp  class-template-arg-deduction-cpp17.cpp  concepts-cpp20.cpp  const-cast.cpp  const-method-and-mutable.cpp  consteval-cpp20.cpp  constexpr-cpp11.cpp  constinit-cpp20.cpp  ctors.cpp  decltype-auto-cpp14.cpp  deducing-this-cpp23.cpp  default-arguments.cpp  delegating-ctors-cpp11.cpp  designated-init-cpp20.cpp  dtor.cpp  dynamic-cast.cpp  enum.cpp  enum.cpp.todo  erase-erase_if-cpp20.cpp  exceptions.cpp  expected-cpp23.cpp  explicit.cpp  extern.cpp  flat-map-cpp23.cpp  fn-overloading.cpp  format-cpp20.cpp  friend-fn-and-class.cpp  generic-lambda-cpp14.cpp  if-consteval-cpp23.cpp  ifdef.cpp  import-std-cpp23.cpp  inheritance.cpp  init-statement-if-switch-cpp17.cpp  init-statement-range-for-cpp20.cpp  init-uniform-cpp11.cpp  inline-fn.cpp  inline-static-cpp17.cpp  (+45 more)
src/algo-data/: linked_list.cpp  string_longest_substr_w_nonrepeat_chars.cpp  tt.cpp
